--- a/data/cards/72443568.yaml
+++ b/data/cards/72443568.yaml
@@ -48,7 +48,7 @@ images:
   image: SilentMagicianLV8-LDK2-EN-C-1E.png
   illustration: SilentMagicianLV8-MADU-EN-VG-artwork.png
 - index: 2
-  image: SilentMagicianLV8-OW.png
+  image: SilentMagicianLV8-AC04-JP-OP.png
   illustration: SilentMagicianLV8-OW.png
 sets:
   en:
@@ -169,6 +169,10 @@ sets:
     set_name: "Duelist Pack: Pharaoh's Memories"
     rarities:
     - Common
+  - set_number: AC04-JP000
+    set_name: Animation Chronicle 2024
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: SD16-KR006
     set_name: 'Structure Deck: Lord of the Magician'
