--- a/data/cards/45452224.yaml
+++ b/data/cards/45452224.yaml
@@ -8,7 +8,7 @@ name:
   it: Kinka-byo
   pt: Kinka-byo
   ja: <ruby>金<rt>きん</rt></ruby><ruby>華<rt>か</rt></ruby><ruby>猫<rt>びょう</rt></ruby>
-  ja_romaji: Kinka Byō
+  ja_romaji: Kinkabyō
   ko: 금화고양이
   ko_rr:
   zh-TW: 金華貓
