--- a/data/cards/yugipedia1054463.yaml
+++ b/data/cards/yugipedia1054463.yaml
@@ -36,7 +36,7 @@ atk: 1800
 def: 1200
 images:
 - index: 1
-  image: AntidoteNurse-OW-2.png
+  image: AntidoteNurse-AC04-JP-OP.png
 sets:
   ja:
   - set_number: AC04-JP0??
