--- a/data/cards/yugipedia1054464.yaml
+++ b/data/cards/yugipedia1054464.yaml
@@ -30,7 +30,7 @@ card_type: Spell
 property: Equip
 images:
 - index: 1
-  image: SoulFist-OW.png
+  image: SoulFist-AC04-JP-OP.png
 sets:
   ja:
   - set_number: AC04-JP0??
