--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -141,7 +141,7 @@ Doodlebook:
   ko: 낙서장
   ko_rr: Nakseojang
   zh-TW:
-  zh-CN:
+  zh-CN: 涂yā本涂鸦本 (Master Duel)
 Appliancer:
   de: Gerätewesen
   es: Electrodomésticor
@@ -921,7 +921,7 @@ Yubel:
   ko: 유벨
   ko_rr: Yubel
   zh-TW:
-  zh-CN:
+  zh-CN: 尤贝尔
 Eyes Restrict:
   de: Äugiges Opfer
   es: Límite de los
@@ -935,17 +935,17 @@ Eyes Restrict:
   zh-TW:
   zh-CN:
 Ragnaraika:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Ragnaraika
+  es: Ragnaraika
+  fr: Ragnaraika
+  it: Ragnaraika
+  pt: Ragnaraika
   ja: <ruby>蕾禍<rt>ライカ</rt></ruby>
   ja_romaji: Raika
-  ko:
+  ko: 뇌화
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 蕾祸
 Magnet Warrior:
   de: Magnetkrieger
   es: Guerrero Magnético
@@ -1749,7 +1749,7 @@ Doodle Beast:
   ko: 낙서괴물
   ko_rr: Nakseogoemul
   zh-TW:
-  zh-CN:
+  zh-CN: 涂yā兽涂鸦兽 (Master Duel)
 Laval:
   de: Laval
   es: Laval
