--- a/rush.yaml
+++ b/rush.yaml
@@ -142774,7 +142774,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack, shuffle 2-4 Psychic Type monsters from your Graveyard into the Deck.
+    When an opponent's monster declares an attack, shuffle 2 to 4 Psychic Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
