--- a/data/cards/75220074.yaml
+++ b/data/cards/75220074.yaml
@@ -8,9 +8,9 @@ name:
   it: Drago Armato, il Drago Armatura
   pt: Dragão Armado, o Dragão Encouraçado
   ja: <ruby>鎧<rt>よろい</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>－アームド・ドラゴン－
-  ja_romaji: Yoroiryū - Āmudo Doragon -
+  ja_romaji: Yoroiryū -Āmudo Doragon-
   ko: 갑옷룡－암드 드래곤－
-  ko_rr: Gap-onnyong - Amdeu Deuraegon
+  ko_rr: Gap-onnyong -Amdeu Deuraegon-
   zh-TW: 鎧龍－武裝龍－
   zh-CN: 铠龙-武装龙-
 text:
