--- a/data/cards/kdb20069.yaml
+++ b/data/cards/kdb20069.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20069
 password:
 name:
   en: Embers of the Ashened
@@ -75,7 +75,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054832
 fake_password: 101204093
