--- a/data/cards/00885016.yaml
+++ b/data/cards/00885016.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20062
+password: 885016
 name:
   en: Multi-Universe
   de: Multi-Universum
@@ -62,7 +62,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054874
-fake_password: 101204086
