--- a/data/cards/01607603.yaml
+++ b/data/cards/01607603.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20059
 password: 1607603
 name:
   en: Double Dai
@@ -80,6 +80,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054869
