--- a/data/cards/36974120.yaml
+++ b/data/cards/36974120.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20063
+password: 36974120
 name:
   en: Vouiburial, the Dragon Undertaker
   de: Vouiburial, der Drachen-Totengräber
@@ -78,7 +78,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054875
-fake_password: 101204087
