--- a/data/cards/37006702.yaml
+++ b/data/cards/37006702.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20060
+password: 37006702
 name:
   en: Krishnerd Witch
   de: Krishnerd-Hexe
@@ -66,7 +66,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054871
-fake_password: 101204084
