--- a/data/cards/48228390.yaml
+++ b/data/cards/48228390.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20057
+password: 48228390
 name:
   en: Pyrite Knight
   de: Pyrit-Ritter
@@ -66,7 +66,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054852
-fake_password: 101204081
