--- a/data/cards/74213995.yaml
+++ b/data/cards/74213995.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20058
 password: 74213995
 name:
   en: Battleguard Echoes
@@ -82,6 +82,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054853
