--- a/data/cards/kdb20066.yaml
+++ b/data/cards/kdb20066.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20066
 password:
 name:
   en: Shaman of the Ashened City
@@ -69,7 +69,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054830
 fake_password: 101204090
