--- a/data/cards/kdb20067.yaml
+++ b/data/cards/kdb20067.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20067
 password:
 name:
   en: Spearhead of the Ashened City
@@ -68,7 +68,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054831
 fake_password: 101204091
