--- a/data/cards/kdb20068.yaml
+++ b/data/cards/kdb20068.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20068
 password:
 name:
   en: Veidos the Dragon of Endless Darkness
@@ -78,7 +78,7 @@ sets:
     - Ultra Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054189
 fake_password: 101204092
