--- a/data/cards/kdb20071.yaml
+++ b/data/cards/kdb20071.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20071
 password:
 name:
   en: Extinguishing the Ashened
@@ -64,7 +64,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054834
 fake_password: 101204095
