--- a/data/cards/08540986.yaml
+++ b/data/cards/08540986.yaml
@@ -1,5 +1,5 @@
 konami_id: 20068
-password:
+password: 8540986
 name:
   en: Veidos the Dragon of Endless Darkness
   de: Veidos der Drache der endlosen Finsternis
@@ -81,4 +81,3 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054189
-fake_password: 101204092
