--- a/data/cards/34813443.yaml
+++ b/data/cards/34813443.yaml
@@ -1,5 +1,5 @@
 konami_id: 20072
-password:
+password: 34813443
 name:
   en: Ashened to Endlessness
   de: Endlos in Asche gelegt
@@ -67,4 +67,3 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054835
-fake_password: 101204096
