--- a/data/cards/35035985.yaml
+++ b/data/cards/35035985.yaml
@@ -1,5 +1,5 @@
 konami_id: 20069
-password:
+password: 35035985
 name:
   en: Embers of the Ashened
   de: Glut der in Asche Gelegten
@@ -78,4 +78,3 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054832
-fake_password: 101204093
