--- a/data/cards/62156277.yaml
+++ b/data/cards/62156277.yaml
@@ -1,5 +1,5 @@
 konami_id: 20067
-password:
+password: 62156277
 name:
   en: Spearhead of the Ashened City
   de: Speerspitze der in Asche gelegten Stadt
@@ -71,4 +71,3 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054831
-fake_password: 101204091
