--- a/data/cards/63378869.yaml
+++ b/data/cards/63378869.yaml
@@ -1,5 +1,5 @@
 konami_id: 20064
-password:
+password: 63378869
 name:
   en: Aiza the Dragoness of Deranged Devotion
   de: Aiza die Drachendame der umnachteten Hingabe
@@ -69,4 +69,3 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1054191
-fake_password: 101204088
