--- a/data/cards/yugipedia1056048.yaml
+++ b/data/cards/yugipedia1056048.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>亜<rt>あ</rt></ruby><ruby>空<rt>くう</rt></ruby><ruby>間<rt>かん</rt></ruby><ruby>物<rt>ぶっ</rt></ruby><ruby>質<rt>しつ</rt></ruby><ruby>回<rt>かい</rt></ruby><ruby>送<rt>そう</rt></ruby><ruby>装<rt>そう</rt></ruby><ruby>置<rt>ち</rt></ruby>
-  ja_romaji: Akūkan Busshitsu Kaisō Sōchi
+  ja_romaji: Akūkan Busshitsu Kaisōsōchi
   ko:
   ko_rr:
   zh-TW:
