--- a/rush.yaml
+++ b/rush.yaml
@@ -140007,6 +140007,66 @@ yugipedia_page_id: 1044912
 ---
 konami_id:
 name:
+  en: Dragonic Geist
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ドラゴニック・ガイスト
+  ja_romaji: Doragonikku Gaisuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 7 EARTH Attribute or DARK Attribute monster with 2500 ATK from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: EARTH
+level: 1
+atk: 0
+def: 0
+images:
+- index: 1
+  image: DragonicGeist-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP029
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044914
+---
+konami_id:
+name:
   en: Straynge Cat Witch
   de:
   es:
@@ -142878,3 +142938,63 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1055877
+---
+konami_id:
+name:
+  en: Twin Edge Phantom Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ツインエッジ・ファントム・ドラゴン
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, change this card's battle position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, 1 face-up Level 7 DARK Attribute Dragon Type monster with 2500 ATK on your field gains 500 ATK and can make up to 2 attacks on monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: DARK
+level: 3
+atk: 1000
+def: 0
+images:
+- index: 1
+  image: TwinEdgePhantomDragon-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP030
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1056156
