--- a/data/cards/24839398.yaml
+++ b/data/cards/24839398.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 24839398
 name:
   en: Trap Gather
   de:
@@ -45,4 +45,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1056045
-fake_password: 101205065
