--- a/data/cards/84079032.yaml
+++ b/data/cards/84079032.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 84079032
 name:
   en: Menkoumori
   de:
@@ -49,4 +49,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1056050
-fake_password: 101205030
