--- a/data/cards/57985393.yaml
+++ b/data/cards/57985393.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 57985393
 name:
   en: Broomy
   de:
@@ -49,4 +49,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1056049
-fake_password: 101205029
