--- a/rush.yaml
+++ b/rush.yaml
@@ -142948,7 +142948,7 @@ name:
   it:
   pt:
   ja: ツインエッジ・ファントム・ドラゴン
-  ja_romaji:
+  ja_romaji: Tsuin Ejji Fantomu Doragon
   ko:
   ko_rr:
   zh-TW:
