--- a/data/cards/58604027.yaml
+++ b/data/cards/58604027.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Normal/Baixado. Você deve Invocá-lo por Invocação-Especial (da sua mão) ao oferecer como Tributo 1 monstro "O Proibido" e não pode Invocá-lo por Invocação-Especial de nenhuma outra forma. Este card ganha 1000 de ATK para cada monstro "O Proibido" no seu Cemitério. Não é afetado por outros efeitos de cards. Uma vez por turno, durante sua Fase Final: adicione 1 monstro "O Proibido" do seu Cemitério à sua mão. Quando este card for destruído em batalha e enviado para o Cemitério: você pode revelar qualquer número de monstros "O Proibido" na sua mão e, se isso acontecer, compre 1 card para cada.
   ja: |-
-    このカードは通常召喚できない。自分フィールドの「封印されし」モンスター１体をリリースした場合のみ特殊召喚できる。①：このカードの攻撃力は、自分の墓地の「封印されし」モンスターの数×１０００アップする。②：このカードは他のカードの効果を受けない。③：自分エンドフェイズに発動する。自分の墓地から「封印されし」モンスター１体を選んで手札に加える。④：このカードが戦闘で破壊され墓地へ送られた時に発動できる。手札の「封印されし」モンスターを任意の数だけ相手に見せ、見せた数だけ自分はデッキからドローする。
+    このカードは通常召喚できない。自分フィールドの「封印されし」モンスター１体をリリースした場合のみ特殊召喚できる。①：このカードの攻撃力は、自分の墓地の「封印されし」モンスターの数×１０００アップする。②：フィールドのこのカードは他のカードの効果を受けない。③：自分エンドフェイズに発動する。自分の墓地から「封印されし」モンスター１体を手札に加える。④：このカードが戦闘で破壊され墓地へ送られた時に発動できる。手札の「封印されし」モンスターを任意の数だけ相手に見せ、見せた数だけ自分はドローする。
   ko: |-
     이 카드는 통상 소환할 수 없다. 자신 필드의 "봉인된" 몬스터 1장을 릴리스했을 경우에만 특수 소환할 수 있다. ①: 이 카드의 공격력은 자신 묘지의 "봉인된" 몬스터의 수 × 1000 올린다. ②: 이 카드는 다른 카드의 효과를 받지 않는다. ③: 자신 엔드 페이즈에 발동한다. 자신의 묘지에서 "봉인된" 몬스터 1장을 고르고 패에 넣는다. ④: 이 카드가 전투로 파괴되어 묘지로 보내졌을 때에 발동할 수 있다. 패의 "봉인된" 몬스터를 임의의 수만큼 상대에게 보여주고, 보여준 수만큼 자신은 덱에서 드로우한다.
   zh-TW: |-
@@ -80,6 +80,10 @@ sets:
     set_name: Prismatic God Box
     rarities:
     - Millennium Rare
+  - set_number: INFO-JPS01
+    set_name: Infinite Forbidden +1 Bonus Pack
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: MB01-KR001
     set_name: Millennium Deck
