--- a/data/cards/01528054.yaml
+++ b/data/cards/01528054.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Effect Monsters
-    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Top Hat Hare the Silhouette Magician" once per turn. If this card is Link Summoned: You can Set 1 Continuous Trap directly from your Deck with an effect that Special Summons itself as a monster, also this card cannot be used as Link Material for the rest of this turn. If a card(s) is Special Summoned from the Spell & Trap Zone to the Monster Zone: You can target 1 Spell/Trap your opponent controls; destroy it.
+    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Top Hat Hare the Silhouette Magician" once per turn. If this card is Link Summoned: You can Set 1 Continuous Trap directly from your Deck with an effect that Special Summons itself as a monster, also this card cannot be used as Link Material for the rest of this turn. If a card(s) is Special Summoned from the Spell & Trap Zone to the Monster Zone (except during the Damage Step): You can target 1 Spell/Trap your opponent controls; destroy it.
   de:
   es:
   fr:
