--- a/data/cards/25388971.yaml
+++ b/data/cards/25388971.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20252
+password: 25388971
 name:
   en: Sangen Kaihou
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手のメインフェイズに、自分フィールドのモンスターがドラゴン族・炎属性モンスターのみで、相手フィールドのモンスターの数が自分フィールドのモンスターより多い場合に発動できる。このメインフェイズを終了する。②：３回以上攻撃宣言された自分・相手ターンに、墓地のこのカードを除外して発動できる。自分は１枚ドローする。その後、手札から「天盃龍」モンスターを任意の数だけ特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -37,13 +38,13 @@ sets:
   - set_number: INFO-JP073
     set_name: The Infinite Forbidden
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1053412
-fake_password: 101205073
