--- a/data/cards/50042011.yaml
+++ b/data/cards/50042011.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a monster(s) in your possession was destroyed by card effect this turn (Quick Effect): You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can Fusion Summon 1 "Memento" Fusion Monster from your Extra Deck, using monsters from your hand or field as material. If this card is destroyed by battle or card effect: You can send 1 "Memento" card from your Deck to the GY, except "Mementotlan Mystical Sheep". You can only use each effect of "Mementotlan Mystical Sheep" once per turn.
+    If a monster(s) in your possession was destroyed by card effect this turn (Quick Effect): You can Special Summon this card from your hand. If this card is Normal or Special Summoned (except during the Damage Step): You can Fusion Summon 1 "Memento" Fusion Monster from your Extra Deck, using monsters from your hand or field as material. If this card is destroyed by battle or card effect: You can send 1 "Memento" card from your Deck to the GY, except "Mementotlan Mystical Sheep". You can only use each effect of "Mementotlan Mystical Sheep" once per turn.
   de:
   es:
   fr:
