--- a/data/cards/61980241.yaml
+++ b/data/cards/61980241.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can send 1 Spell/Trap from your hand or field to the GY; Special Summon this card from your hand, then add 1 "White Woods" monster from your Deck to your hand, except "Risette of the White Woods". If a LIGHT Spellcaster Tuner(s) is Special Summoned to your field during your opponent's turn while this card is in your GY: You can add this card to your hand. You can only use each effect of "Risette of the White Woods" once per turn.
+    You can send 1 Spell/Trap from your hand or field to the GY; Special Summon this card from your hand, then add 1 "White Woods" monster from your Deck to your hand, except "Risette of the White Woods". If a LIGHT Spellcaster Tuner(s) is Special Summoned to your field during your opponent's turn while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use each effect of "Risette of the White Woods" once per turn.
   de:
   es:
   fr:
