--- a/data/cards/84079032.yaml
+++ b/data/cards/84079032.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Up to thrice per turn, if your opponent Normal or Special Summons a monster(s): You can target 1 of them; toss a coin and if the result is heads, change it to face-up Attack Position, or if the result is tails, change it to face-down Defense Position. Once per turn, if a monster(s) on the field is flipped face-up, or a face-up monster(s) is changed to face-down Defense Position, while this card is in the Monster Zone, even during the Damage Step: You can target 1 of them; change it to face-up Attack Position or face-down Defense Position.
+    Up to thrice per turn, if your opponent Normal or Special Summons a monster(s) (except during the Damage Step): You can target 1 of them; toss a coin and if the result is heads, change it to face-up Attack Position, or if the result is tails, change it to face-down Defense Position. Once per turn, if a monster(s) on the field is flipped face-up, or a face-up monster(s) is changed to face-down Defense Position, while this card is in the Monster Zone, even during the Damage Step: You can target 1 of them; change it to face-up Attack Position or face-down Defense Position.
   de:
   es:
   fr:
