--- a/data/cards/97045737.yaml
+++ b/data/cards/97045737.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20257
+password: 97045737
 name:
   en: Dominus Purge
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。相手フィールドにカードが存在する場合、このカードの発動は手札からもできる。①：デッキからカードを手札に加える効果を含む、魔法・罠・モンスターの効果が発動した時に発動できる。その効果を無効にする。自分の墓地に罠カードが存在する場合、さらにその無効にしたカードを破壊する。このカードを手札から発動した場合、発動後、このデュエル中に自分は闇・水・炎属性モンスターの効果を発動できない。
   ko:
   zh-TW:
   zh-CN:
@@ -45,11 +46,10 @@ sets:
     - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1055756
-fake_password: 101205078
