--- a/data/cards/03685372.yaml
+++ b/data/cards/03685372.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 9 monsters
-    If this card is Special Summoned: You can add 1 "Puppet" Trap from your Deck to your hand. You can detach 1 material from this card; Special Summon 1 monster from either GY to your opponent's field in Defense Position. If a monster(s) is Special Summoned to your opponent's field: You can target 1 of them; destroy it, and if you do, inflict damage to your opponent equal to half its original ATK. You can only use each effect of "CXyz Gimmick Puppet Fanatix Makina" once per turn.
+    If this card is Special Summoned: You can add 1 "Puppet" Trap from your Deck to your hand. You can detach 1 material from this card; Special Summon 1 monster from either GY to your opponent's field in Defense Position. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can target 1 of them; destroy it, and if you do, inflict damage to your opponent equal to half its original ATK. You can only use each effect of "CXyz Gimmick Puppet Fanatix Makina" once per turn.
   de:
   es:
   fr:
