--- a/data/cards/24440742.yaml
+++ b/data/cards/24440742.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20258
+password: 24440742
 name:
   en: Silhouhatte
   de:
@@ -24,7 +24,10 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：このカードは発動後、以下の効果を持つ効果モンスター（幻想魔族・闇・星４・攻１５００／守６００）となり、モンスターゾーンに特殊召喚する（罠カードとしても扱う）。
+    ●このカードが特殊召喚した場合、自分フィールドの幻想魔族モンスターの数まで相手フィールドの表側表示カードを対象として発動できる。そのカードの効果をターン終了時まで無効にする。
+    ●このカードがモンスターと戦闘を行う場合、その２体はその戦闘では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -40,13 +43,13 @@ sets:
   - set_number: INFO-JP079
     set_name: The Infinite Forbidden
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1055819
-fake_password: 101205079
