--- a/data/cards/37552929.yaml
+++ b/data/cards/37552929.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Millenniumoon Maiden" once per turn. If this card is in your hand: You can place it face-up in your Spell & Trap Zone as a Continuous Spell. If your opponent activates a card or effect while this card is a Continuous Spell: You can Special Summon this card, and if you do, your opponent cannot target Level 5 or higher Illusion and Spellcaster monsters you control with card effects this turn.
+    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Millenniumoon Maiden" once per turn. If this card is in your hand: You can place it face-up in your Spell & Trap Zone as a Continuous Spell. If your opponent activates a card or effect while this card is a Continuous Spell (except during the Damage Step): You can Special Summon this card, and if you do, your opponent cannot target Level 5 or higher Illusion and Spellcaster monsters you control with card effects this turn.
   de:
   es:
   fr:
