--- a/data/cards/50838440.yaml
+++ b/data/cards/50838440.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 20259
+password: 50838440
 name:
   en: Three as One
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：相手エンドフェイズに、相手の手札・フィールドのカードの数が、自分の手札・フィールドのカードの数より多い場合に発動できる。自分の墓地から通常モンスター３体を特殊召喚する。②：墓地のこのカードを除外し、元々のカード名が異なる自分フィールドのモンスターカード３枚を対象として発動できる。そのカード３枚の元々のカード名が全て記された魔法・罠カード１枚を手札・デッキから自分フィールドにセットする。
   ko:
   zh-TW:
   zh-CN:
@@ -35,13 +36,13 @@ sets:
   - set_number: INFO-JP080
     set_name: The Infinite Forbidden
     rarities:
+    - Normal Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1055327
-fake_password: 101205080
