--- a/data/cards/76290637.yaml
+++ b/data/cards/76290637.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 8 monsters
-    You can detach 1 material from this card; add 1 "Rank-Up-Magic" Spell from your Deck to your hand, also, during your Main Phase this turn, you can Normal Summon 1 Machine monster in addition to your Normal Summon/Set. If you Special Summon a "Gimmick Puppet" Xyz Monster(s): You can Special Summon this card from your GY to either field in Defense Position, then you can add 1 "Rank-Up-Magic" Spell from your GY to your hand. You can only use each effect of "Gimmick Puppet Fantasix Makina" once per turn.
+    You can detach 1 material from this card; add 1 "Rank-Up-Magic" Spell from your Deck to your hand, also, during your Main Phase this turn, you can Normal Summon 1 Machine monster in addition to your Normal Summon/Set. If you Special Summon a "Gimmick Puppet" Xyz Monster(s) (except during the Damage Step): You can Special Summon this card from your GY to either field in Defense Position, then you can add 1 "Rank-Up-Magic" Spell from your GY to your hand. You can only use each effect of "Gimmick Puppet Fantasix Makina" once per turn.
   de:
   es:
   fr:
