--- a/data/cards/98007437.yaml
+++ b/data/cards/98007437.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you Special Summon a Level 5 or higher Dragon monster(s): You can Special Summon this card from your hand. If this card is Special Summoned: You can make its Attribute and Level become 1 of your banished Dragon monsters'. If this card is sent to the GY: You can target 1 Dragon monster you control; it gains 1000 ATK. Neither player can activate cards or effects in response to this effect's activation. You can only use each effect of "Knight Armed Dragon" once per turn.
+    If you Special Summon a Level 5 or higher Dragon monster(s) (except during the Damage Step): You can Special Summon this card from your hand. If this card is Special Summoned: You can make its Attribute and Level become 1 of your banished Dragon monsters'. If this card is sent to the GY: You can target 1 Dragon monster you control; it gains 1000 ATK. Neither player can activate cards or effects in response to this effect's activation. You can only use each effect of "Knight Armed Dragon" once per turn.
   de:
   es:
   fr:
