--- a/data/cards/21502796.yaml
+++ b/data/cards/21502796.yaml
@@ -254,7 +254,7 @@ sets:
     rarities:
     - Gold Rare
   - set_number: DS14-JPL10
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: ST17-JP017
@@ -288,7 +288,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-KRL10
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: ST17-KR017
