--- a/data/cards/21785144.yaml
+++ b/data/cards/21785144.yaml
@@ -117,7 +117,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-JPL02
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   ko:
@@ -130,7 +130,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-KRL02
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   zh-TW:
