--- a/data/cards/36099620.yaml
+++ b/data/cards/36099620.yaml
@@ -87,7 +87,7 @@ sets:
     rarities:
     - Rare
   - set_number: DS14-JPL21
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   ko:
@@ -96,7 +96,7 @@ sets:
     rarities:
     - Rare
   - set_number: DS14-KRL23
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
 limit_regulation:
