--- a/data/cards/47484352.yaml
+++ b/data/cards/47484352.yaml
@@ -49,6 +49,12 @@ sets:
     rarities:
     - Common
     - Super Rare
+  ko:
+  - set_number: 2023-KR001
+    set_name: Yu-Gi-Oh! World Championship 2023 Korea Qualifiers promotional card
+    rarities:
+    - Common
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
