--- a/data/rush/yugipedia1055194.yaml
+++ b/data/rush/yugipedia1055194.yaml
@@ -54,6 +54,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
