--- a/data/rush/yugipedia1051648.yaml
+++ b/data/rush/yugipedia1051648.yaml
@@ -63,6 +63,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
