--- a/rush.yaml
+++ b/rush.yaml
@@ -141129,6 +141129,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -142371,6 +142372,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -142811,6 +142813,7 @@ sets:
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
