--- a/data/cards/62002838.yaml
+++ b/data/cards/62002838.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>闇と消滅の竜<rt>ダークエンドイヴァボレイション・ドラゴン</rt></ruby>
+  ja: <ruby>闇と消滅の竜<rt>ダークエンドイヴァポレイション・ドラゴン</rt></ruby>
   ja_romaji: Dāku Endo Ivaporeishon Doragon
   ko:
   ko_rr:
