--- a/data/cards/01528054.yaml
+++ b/data/cards/01528054.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>影<rt>かげ</rt></ruby><ruby>法<rt>ぼう</rt></ruby><ruby>師<rt>し</rt></ruby>トップハットヘア
-  ja_romaji: Kagebōshi Toppuhatto Hea
+  ja: <ruby>影<rt>かげ</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>師<rt>し</rt></ruby>トップハットヘア
+  ja_romaji: Kagehōshi Toppuhatto Hea
   ko:
   ko_rr:
   zh-TW:
