--- a/data/cards/05786513.yaml
+++ b/data/cards/05786513.yaml
@@ -32,9 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 레벨을 3개 올린다. 자신 필드에 "빛의 황금궤" 및 그 카드명이 쓰여진 몬스터가 존재하는 상태에서, 상대 몬스터의 효과 발동에 체인하여 이 카드를 발동했을 경우, 그 상대의 효과를 무효로 한다. ②: "빛의 황금궤"의 카드명이 쓰여진 자신 몬스터가 전투를 실행하는 데미지 계산시에, 묘지의 이 카드를 제외하고 발동할 수 있다. 그 배틀 페이즈를 종료한다.
   zh-TW:
   zh-CN: |-
-    此卡名的卡１回合仅可发动１张。
-    ①：以自己场上的１只表侧表示怪兽为对象可以发动。该怪兽的等级上升３。自己场上存在“光之黄金柜”及记载有该卡名的怪兽的状态下，且为连锁对手怪兽的效果发动而发动此卡的情况下，将该对手的效果无效。
-    ②：记载有“光之黄金柜”卡名的自己的怪兽进行战斗的伤害计算时，将墓地的此卡除外可以发动。结束该战斗阶段。
+    此卡名的卡１回合仅可发动１张。①：以自己场上的１只表侧表示怪兽为对象可以发动。该怪兽的等级上升３。自己场上存在“光之黄金柜”及记载有该卡名的怪兽的状态下，且为连锁对手怪兽的效果发动而发动此卡的情况下，将该对手的效果无效。②：记载有“光之黄金柜”卡名的自己的怪兽进行战斗的伤害计算时，将墓地的此卡除外可以发动。结束该战斗阶段。
 card_type: Spell
 property: Quick-Play
 series:
@@ -73,6 +71,10 @@ sets:
     set_name: Legacy of Destruction
     rarities:
     - Common
+  - set_number: 24YJ-JPT01
+    set_name: Shining Sarcophagus Duel Set
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: LEDE-KR052
     set_name: Legacy of Destruction
