--- a/data/cards/89023486.yaml
+++ b/data/cards/89023486.yaml
@@ -35,9 +35,7 @@ text:
     ①：可將我方場上的１張此卡以外的正面表示卡送至墓地發動。從手牌・牌組特殊召喚１隻炎屬性・等級１怪獸。
     ②：可將墓地的此卡除外，將我方墓地的１隻「蛇眼」怪獸或１隻「迪亞貝爾斯塔」怪獸做為對象發動。從牌組將１隻炎屬性・等級１怪獸加入手牌。其後，將對象怪獸送回牌組的最下方。
   zh-CN: |-
-    此卡名的①②效果１回合１次，仅可使用其中１个。
-    ①：将自己场上此卡以外的１张表侧表示卡送至墓地可以发动。从手牌・牌组将１只炎属性・等级１怪兽特殊召唤。
-    ②：将墓地的此卡除外，以自己墓地的１只“蛇眼”怪兽或“迪亚贝尔斯塔”怪兽为对象可以发动。从牌组将１只炎属性・等级１怪兽加入手牌。然后，将对象怪兽放回牌组最下面。
+    此卡名的①②效果１回合１次，仅可使用其中１个。①：将自己场上此卡以外的１张表侧表示卡送至墓地可以发动。从手牌・牌组将１只炎属性・等级１怪兽特殊召唤。②：将墓地的此卡除外，以自己墓地的１只“蛇眼”怪兽或“迪亚贝尔斯塔”怪兽为对象可以发动。从牌组将１只炎属性・等级１怪兽加入手牌。然后，将对象怪兽放回牌组最下面。
 card_type: Spell
 property: Normal
 series:
@@ -82,6 +80,10 @@ sets:
     set_name: Age of Overlord
     rarities:
     - Rare
+  - set_number: 24YJ-JPT02
+    set_name: Diabellstar Duel Set
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: AGOV-KR057
     set_name: Age of Overlord
