--- a/data/cards/47942531.yaml
+++ b/data/cards/47942531.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 伟大魔兽 加泽特
 text:
   en: |-
-    The ATK of this card becomes twice the original ATK of 1 monster that you Tributed for the Tribute Summon of this card.
+    Whenever your opponent summons a monster it loses 500 ATK and DEF.
   de: |-
     Die ATK dieser Karte wird zum Doppelten der Grund-ATK des Tributmonsters, das für die Tributbeschwörung dieser Karte angeboten wurde.
   es: |-
@@ -37,9 +37,9 @@ text:
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
-level: 6
-atk: 0
-def: 0
+level: 7
+atk: 2800
+def: 2500
 series:
 - Maju
 images:
