--- a/data/cards/08794435.yaml
+++ b/data/cards/08794435.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 合成魔兽 加泽特
 text:
   en: |-
-    The ATK of this card becomes equal to the combined original ATK of the 2 monsters you Tributed for the Tribute Summon of this card.
+    Whenever your opponent summons a monster it loses 300 ATK and DEF.
   de: |-
     Die ATK dieser Karte wird zur Summe der Grund-ATK der 2 Monster, die für die Tributbeschwörung dieser Karte als Tribut angeboten wurden.
   es: |-
@@ -38,8 +38,8 @@ card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
 level: 7
-atk: '?'
-def: 0
+atk: 2600
+def: 2300
 series:
 - Maju
 images:
