--- a/rush.yaml
+++ b/rush.yaml
@@ -143061,3 +143061,123 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1056550
+---
+konami_id:
+name:
+  en: Watermirror Serpent
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ウォーターミラー・サーペント
+  ja_romaji: Wōtāmirā Sāpento
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, shuffle 2 non-Fusion Monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Fusion Summon by sending 1 Level 7 WATER Attribute or EARTH Attribute Dragon Type monster and 2 or more Dragon Type monsters from your hand and/or field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: WATER
+level: 2
+atk: 0
+def: 800
+images:
+- index: 1
+  image: WatermirrorSerpent-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP034
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1056652
+---
+konami_id:
+name:
+  en: Fusionic Tribevern
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: フュージョニック・トライバーン
+  ja_romaji: Fyūjonikku Toraibān
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If the only monsters in your Graveyard are High Dragon Type and/or Dragon Type, send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Increase this card's Level by 4 until the end of this turn. Then, you can add 1 "Watermirror Serpent" or 1 "Dragon Tribe Fusion" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 3
+atk: 600
+def: 800
+images:
+- index: 1
+  image: FusionicTribevern-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP036
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1056655
