--- a/data/cards/32270212.yaml
+++ b/data/cards/32270212.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     If you control "Shining Sarcophagus" and a monster that mentions it: Special Summon up to 2 Level 4 or lower monsters with different names that mention "Shining Sarcophagus" from your hand and/or Deck, also, for the rest of this turn after this card resolves, you cannot Special Summon from the Extra Deck. You can only activate 1 "Ties That Bind" per turn.
   de: |-
-    Se controlli "Sarcofago Brillante" e un mostro che lo menziona: Evoca Specialmente fino a 2 mostri di Livello 4 o inferiore con nomi diversi che menzionano "Sarcofago Brillante" dalla tua mano e/o Deck, inoltre, per il resto di questo turno dopo che questa carta si è risolta, non puoi Evocare Specialmente dall'Extra Deck. Puoi attivare solo 1 "Legami che Vincolano" per turno.
+    Falls du „Glänzender Sarkophag“ und ein Monster, das ihn erwähnt, kontrollierst: Beschwöre bis zu 2 Monster der Stufe 4 oder niedriger mit unterschiedlichen Namen, die „Glänzender Sarkophag“ erwähnen, als Spezialbeschwörung von deiner Hand und/oder deinem Deck, zusätzlich kannst du für den Rest dieses Spielzugs, nachdem diese Karte aufgelöst wurde, keine Spezialbeschwörungen vom Extra Deck durchführen. Du kannst nur 1 „Enger Bund“ pro Spielzug aktivieren.
   es: |-
     Si controlas "Cofre Brillante Sellado" y un monstruo que lo menciona: Invoca de Modo Especial, desde tu mano y/o Deck, hasta 2 monstruos de Nivel 4 o menor con nombres diferentes que mencionen "Cofre Brillante Sellado" y además, por el resto de este turno después de que esta carta se resuelva, no puedes Invocar de Modo Especial desde el Deck Extra. Sólo puedes activar 1 "Lazos que Unen" por turno.
   fr: |-
