--- a/rush.yaml
+++ b/rush.yaml
@@ -97426,6 +97426,8 @@ attribute: DARK
 level: 7
 atk: 0
 def: 0
+series:
+- Garzett
 images:
 - index: 1
   image: MajuGarzett-RDLGP1-JP-UR.png
@@ -98305,6 +98307,8 @@ attribute: DARK
 level: 6
 atk: 0
 def: 0
+series:
+- Garzett
 legend: true
 images:
 - index: 1
@@ -142560,6 +142564,8 @@ attribute: DARK
 level: 8
 atk: 0
 def: 0
+series:
+- Garzett
 images:
 - index: 1
   image: GodMajuGarzett-RDKP17-JP-OP.png
