--- a/data/cards/95515789.yaml
+++ b/data/cards/95515789.yaml
@@ -49,6 +49,9 @@ images:
 - index: '1.1'
   image: BlazingCartesiatheVirtuous-MP23-EN-PScR-1E.png
   illustration: BlazingCartesiatheVirtuous-MADU-EN-VG-artwork.png
+- index: 2
+  image: BlazingCartesiatheVirtuous-CF01-JP-OP.png
+  illustration: BlazingCartesiatheVirtuous-OW.png
 sets:
   en:
   - set_number: DABL-EN011
@@ -116,6 +119,14 @@ sets:
     set_name: High-Resolution Artwork Series
     rarities:
     - Ultra Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+  - set_number: CF01-JPS04
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: DABL-KR011
     set_name: Darkwing Blast
