--- a/rush.yaml
+++ b/rush.yaml
@@ -23721,7 +23721,7 @@ name:
   ja: いとをかしかなひめ
   ja_romaji: Itowokashi Kanahime
   ko: 앙갱공주
-  ko_rr:
+  ko_rr: Anggaenggongju
   zh-TW:
   zh-CN:
 text:
