--- a/data/cards/62995268.yaml
+++ b/data/cards/62995268.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>白<rt>しろ</rt></ruby>き<ruby>森<rt>もり</rt></ruby>のわざわいなり
-  ja_romaji: Shiroki Mori no Wazawainari
+  ja_romaji: Shiroki Mori no Wazawai Nari
   ko:
   ko_rr:
   zh-TW:
