--- a/data/cards/99989863.yaml
+++ b/data/cards/99989863.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>刻まれし魔の楽園<rt>デモンスミス・イン・パラディズム</rt></ruby>
-  ja_romaji: Demonsumisu in Paradizumu
+  ja_romaji: Demonsumisu In Paradizumu
   ko:
   ko_rr:
   zh-TW:
