--- a/rush.yaml
+++ b/rush.yaml
@@ -3397,7 +3397,7 @@ name:
   ja: <ruby>古<rt>いにしえ</rt></ruby>の<ruby>守<rt>まも</rt></ruby>り<ruby>亀<rt>がめ</rt></ruby>
   ja_romaji: Inishie no Mamorigame
   ko: 고대의 수호거북
-  ko_rr:
+  ko_rr: Godae-ui Suhogeobuk
   zh-TW:
   zh-CN:
 text:
@@ -12521,7 +12521,7 @@ name:
   ja: <ruby>月<rt>つき</rt></ruby><ruby>涙<rt>なみ</rt></ruby>の<ruby>兎<rt>うさぎ</rt></ruby>
   ja_romaji: Tsukinami no Usagi
   ko: 달눈물의 토끼
-  ko_rr:
+  ko_rr: Dannunmur-ui Tokki
   zh-TW:
   zh-CN:
 text:
@@ -143187,3 +143187,184 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1056655
+---
+konami_id:
+name:
+  en: Plus Skull
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: タスドクロ
+  ja_romaji: Dasudokuro
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Change this Attack Position card to face-up Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, 1 face-up DARK Attribute Fiend Type monster with 0 original ATK/DEF on your field gains 1000 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 4
+atk: 1300
+def: 0
+images:
+- index: 1
+  image: PlusSkull-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP040
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1056950
+---
+konami_id:
+name:
+  en: Multiply Skull
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: マスドクロ
+  ja_romaji: Masudokuro
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Fiend Type Effect Monster with 0 ATK/DEF in Attack Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 4
+atk: 1300
+def: 0
+images:
+- index: 1
+  image: MultiplySkull-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP041
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1056952
+---
+konami_id:
+name:
+  en: Copycat
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    TBA
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: LIGHT
+level: 1
+atk: 0
+def: 0
+legend: true
+images:
+- index: 1
+  image: Copycat-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP040
+    set_name: Saikyō Jump July 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1056956
