--- a/data/rush/16294.yaml
+++ b/data/rush/16294.yaml
@@ -9,7 +9,7 @@ name:
   ja: <ruby>監<rt>かん</rt></ruby><ruby>獄<rt>ごく</rt></ruby>の<ruby>神<rt>かみ</rt></ruby> ディアン・ケト
   ja_romaji: Kangoku no Kami Dian Keto
   ko: 감옥의 신 다이안 켓
-  ko_rr:
+  ko_rr: Gam-og-ui Sin Daian Ket
   zh-TW:
   zh-CN:
 requirement:
