--- a/data/rush/17679.yaml
+++ b/data/rush/17679.yaml
@@ -9,7 +9,7 @@ name:
   ja: <ruby>彩<rt>さい</rt></ruby><ruby>光<rt>こう</rt></ruby><ruby>超<rt>ちょう</rt></ruby>プリンセスオメガ
   ja_romaji: Saikōchō Purinsesu Omega
   ko: 채광초 프린세스오메가
-  ko_rr:
+  ko_rr: Chegwangcho Peurinseseuomega
   zh-TW:
   zh-CN:
 requirement:
