--- a/data/rush/15437.yaml
+++ b/data/rush/15437.yaml
@@ -9,7 +9,7 @@ name:
   ja: <ruby>逆<rt>ぎゃく</rt></ruby><ruby>玉<rt>たま</rt></ruby>の<ruby>神<rt>かみ</rt></ruby> ディアン・ケト
   ja_romaji: Gyakutama no Kami Dian Keto
   ko: 역옥의 신 다이안 켓
-  ko_rr:
+  ko_rr: Yeog-og-ui Sin Daian Ket
   zh-TW:
   zh-CN:
 requirement:
