--- a/rush.yaml
+++ b/rush.yaml
@@ -8426,7 +8426,7 @@ name:
   ja: <ruby>逆<rt>ぎゃく</rt></ruby><ruby>玉<rt>たま</rt></ruby>の<ruby>神<rt>かみ</rt></ruby> ディアン・ケト
   ja_romaji: Gyakutama no Kami Dian Keto
   ko: 역옥의 신 다이안 켓
-  ko_rr:
+  ko_rr: Yeog-og-ui Sin Daian Ket
   zh-TW:
   zh-CN:
 requirement:
@@ -15730,7 +15730,7 @@ name:
   ja: オジサン
   ja_romaji: Ojisan
   ko: 아저치
-  ko_rr:
+  ko_rr: Ajeochi
   zh-TW:
   zh-CN:
 text:
@@ -27747,7 +27747,7 @@ name:
   ja:
   ja_romaji:
   ko: 치료의 신 다이안 켓
-  ko_rr:
+  ko_rr: Chiryoui Sin Daian Ket
   zh-TW:
   zh-CN:
 requirement:
@@ -28307,7 +28307,7 @@ name:
   ja: <ruby>監<rt>かん</rt></ruby><ruby>獄<rt>ごく</rt></ruby>の<ruby>神<rt>かみ</rt></ruby> ディアン・ケト
   ja_romaji: Kangoku no Kami Dian Keto
   ko: 감옥의 신 다이안 켓
-  ko_rr:
+  ko_rr: Gam-og-ui Sin Daian Ket
   zh-TW:
   zh-CN:
 requirement:
@@ -68999,7 +68999,7 @@ name:
   ja: <ruby>彩<rt>さい</rt></ruby><ruby>光<rt>こう</rt></ruby><ruby>超<rt>ちょう</rt></ruby>プリンセスオメガ
   ja_romaji: Saikōchō Purinsesu Omega
   ko: 채광초 프린세스오메가
-  ko_rr:
+  ko_rr: Chegwangcho Peurinseseuomega
   zh-TW:
   zh-CN:
 requirement:
@@ -69638,7 +69638,7 @@ name:
   ja: <ruby>厨<rt>ちゅう</rt></ruby><ruby>房<rt>ぼう</rt></ruby>の<ruby>神<rt>かみ</rt></ruby> ディアン・ケト
   ja_romaji: Chūbō no Kami Dian Keto
   ko: 주방의 신 다이안 켓
-  ko_rr:
+  ko_rr: Jubang-ui Sin Daian Ket
   zh-TW:
   zh-CN:
 requirement:
