--- a/data/rush/yugipedia1056950.yaml
+++ b/data/rush/yugipedia1056950.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up DARK Attribute Fiend Type monster with 0 original ATK/DEF on your field gains 1000 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    This turn, 1 face-up DARK Attribute Fiend Type monster on your field with 0 original ATK and DEF gains 1000 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
