--- a/data/rush/yugipedia1056952.yaml
+++ b/data/rush/yugipedia1056952.yaml
@@ -28,7 +28,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Fiend Type Effect Monster with 0 ATK/DEF in Attack Position.
+    This face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Fiend Type Effect Monster with 0 ATK/0 DEF in Attack Position.
   de:
   es:
   fr:
