--- a/rush.yaml
+++ b/rush.yaml
@@ -143216,7 +143216,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up DARK Attribute Fiend Type monster with 0 original ATK/DEF on your field gains 1000 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    This turn, 1 face-up DARK Attribute Fiend Type monster on your field with 0 original ATK and DEF gains 1000 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -143278,7 +143278,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Fiend Type Effect Monster with 0 ATK/DEF in Attack Position.
+    This face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Fiend Type Effect Monster with 0 ATK/0 DEF in Attack Position.
   de:
   es:
   fr:
