--- a/data/rush/20275.yaml
+++ b/data/rush/20275.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20275
 name:
   en: Mage Power
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター１体に装備できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    装備モンスターの攻撃力・守備力は、［自分フィールドの魔法・罠カードの数］×５００アップする。
   ko:
   zh-TW:
   zh-CN:
