--- a/rush.yaml
+++ b/rush.yaml
@@ -139409,6 +139409,63 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1046291
 ---
+konami_id: 20275
+name:
+  en: Mage Power
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドの表側表示モンスター１体に装備できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains ATK/DEF equal to [the number of Spell/Trap Cards on your field] x 500.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    装備モンスターの攻撃力・守備力は、［自分フィールドの魔法・罠カードの数］×５００アップする。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+legend: true
+images:
+- index: 1
+  image: MagePower-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP039
+    set_name: Saikyō Jump June 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1052854
+---
 konami_id:
 name:
   en: Cybersepice Hotpot
@@ -141240,61 +141297,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1052181
----
-konami_id:
-name:
-  en: Mage Power
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ja_romaji:
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Equip this card to 1 face-up monster on your field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    The equipped monster gains ATK/DEF equal to [the number of Spell/Trap Cards on your field] x 500.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Spell
-property: Equip
-legend: true
-images:
-- index: 1
-  image: MagePower-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP039
-    set_name: Saikyō Jump June 2024 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  text:
-    en: true
-yugipedia_page_id: 1052854
 ---
 konami_id:
 name:
