--- a/data/cards/45464587.yaml
+++ b/data/cards/45464587.yaml
@@ -9,7 +9,7 @@ name:
   pt: Orgulho Dourado - Erradicador
   ja: <ruby>ＧＰ<rt>ゴールド・プライド</rt></ruby>－アニヒレーター
   ja_romaji: Gōrudo Puraido - Anihirētā
-  ko: GP－어니힐레이터
+  ko: <ruby>GP<rt>골드 프라이드</rt></ruby>－어니힐레이터
   ko_rr:
   zh-TW:
   zh-CN: 黄金荣耀－灭击手
