--- a/data/cards/60203670.yaml
+++ b/data/cards/60203670.yaml
@@ -9,7 +9,7 @@ name:
   pt: Orgulho Dourado - Eliminador
   ja: <ruby>ＧＰ<rt>ゴールド・プライド</rt></ruby>－アサシネーター
   ja_romaji: Gōrudo Puraido - Asashinētā
-  ko: GP－어쌔시네이터
+  ko: <ruby>GP<rt>골드 프라이드</rt></ruby>－어쌔시네이터
   ko_rr: Goldeu Peuraideu - Eossaesineiteo
   zh-TW:
   zh-CN: 黄金荣耀－暗袭手
