--- a/data/cards/02333466.yaml
+++ b/data/cards/02333466.yaml
@@ -9,7 +9,7 @@ name:
   pt: Gandora-G, o Dragão da Destruição
   ja: <ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ガンドラ<ruby>Ｇ<rt>ギアス</rt></ruby>
   ja_romaji: Hakairyū Gandora Giasu
-  ko: 파괴룡 간드라G
+  ko: 파괴룡 간드라<ruby>G<rt>기아스</rt></ruby>
   ko_rr: Pagoeryong Gandeura Giaseu
   zh-TW:
   zh-CN: 破坏龙 钢多拉G
