--- a/data/cards/97698279.yaml
+++ b/data/cards/97698279.yaml
@@ -9,7 +9,7 @@ name:
   pt: Centur-Ião Gárgula II
   ja: <ruby>竜騎兵<rt>センチュリオン</rt></ruby>ガーゴイル<ruby>Ⅱ<rt>ツヴァイ</rt></ruby>
   ja_romaji: Senchurion Gāgoiru Tsuvai
-  ko: 센츄리온 가고일Ⅱ
+  ko: 센츄리온 가고일<ruby>Ⅱ<rt>츠바이</rt></ruby>
   ko_rr: Senchyurion Gagoil Cheubai
   zh-TW:
   zh-CN: 龙装百夫骑兵 卡戈尔Ⅱ
