--- a/rush.yaml
+++ b/rush.yaml
@@ -139454,7 +139454,7 @@ property: Equip
 legend: true
 images:
 - index: 1
-  image: MagePower-RDSJMP-JP-OP.png
+  image: MagePower-RDSJMP-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP039
@@ -143370,3 +143370,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1056956
+---
+konami_id:
+name:
+  en: Spice Cross Secret Recipe
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スパイスクロース・シークレットレシピ
+  ja_romaji: Supaisu Kurosu Shīkuretto Reshipi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster, shuffle 2 Cyberse Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change 1 face-up Level 9 or lower monster on your opponent's field to face-down Defense Position. Then, you can place 1 card from your opponent's Graveyard on either the top or bottom of their Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Cybersepice
+images:
+- index: 1
+  image: SpiceCrossSecretRecipe-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP060
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1057028
