--- a/rush.yaml
+++ b/rush.yaml
@@ -143428,3 +143428,174 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1057028
+---
+konami_id:
+name:
+  en: Stone Machine Gareking
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>岩<rt>がん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>神<rt>しん</rt></ruby>ガレキング
+  ja_romaji: Ganseki Mashin Garekingu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 2 face-up Rock Type Normal Monsters on your field, send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 1400 ATK until the end of this turn. Then, if you have 3 face-up Level 5-7 monsters with different Levels on your field, you can destroy all face-up Level 7 or lower monsters on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Rock / Effect
+attribute: EARTH
+level: 7
+atk: 2500
+def: 1400
+series:
+- Stone
+images:
+- index: 1
+  image: StoneMachineGareking-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP028
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1057086
+---
+konami_id:
+name:
+  en: Stone Chariot Gravelriot
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>岩<rt>がん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>戦<rt>せん</rt></ruby><ruby>車<rt>しゃ</rt></ruby>ジャリオット
+  ja_romaji: Ganseki Sensha Jariotto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Rock / Normal
+attribute: EARTH
+level: 6
+atk: 1800
+def: 2000
+series:
+- Stone
+images:
+- index: 1
+  image: StoneChariotGravelriot-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP001
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1057087
+---
+konami_id:
+name:
+  en: Data Eater
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: データーイーター
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Reveal 1 EARTH Attribute monster and 1 non-EARTH Attribute monster in your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle 2 cards from your opponent's Graveyard into the Deck. Then, you can make 1 face-up monster on your field gain 500 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 3
+atk: 800
+def: 700
+images:
+- index: 1
+  image: DataEater-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP038
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1057090
