--- a/data/cards/91530236.yaml
+++ b/data/cards/91530236.yaml
@@ -40,10 +40,11 @@ series:
 - Spiritual Art
 images:
 - index: 1
-  image: SpiritCharmers-SD39-JP-SR.png
-  illustration: SpiritCharmers-OW.png
+  image: SpiritCharmers-TDS1-JP-ScR.png
+  illustration: SpiritCharmers-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: SpiritCharmers-SDCH-EN-UR-1E.png
+  illustration: SpiritCharmers-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SDCH-EN041
