--- a/data/rush/yugipedia1057086.yaml
+++ b/data/rush/yugipedia1057086.yaml
@@ -6,7 +6,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>岩<rt>がん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>神<rt>しん</rt></ruby>ガレキング
+  ja: <ruby>岩<rt>がん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>魔神<rt>マシン</rt></ruby>ガレキング
   ja_romaji: Ganseki Mashin Garekingu
   ko:
   ko_rr:
