--- a/data/rush/yugipedia1057087.yaml
+++ b/data/rush/yugipedia1057087.yaml
@@ -7,13 +7,14 @@ name:
   it:
   pt:
   ja: <ruby>岩<rt>がん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>戦<rt>せん</rt></ruby><ruby>車<rt>しゃ</rt></ruby>ジャリオット
-  ja_romaji: Ganseki Sensha Jariotto
+  ja_romaji: Gansekisensha Jariotto
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
-  en:
+  en: |-
+    An ancient tank that drives with incredible balance. It shatters the balance of the enemy forces by penetrating a single point.
   de:
   es:
   fr:
