--- a/rush.yaml
+++ b/rush.yaml
@@ -143437,7 +143437,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>岩<rt>がん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>神<rt>しん</rt></ruby>ガレキング
+  ja: <ruby>岩<rt>がん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>魔神<rt>マシン</rt></ruby>ガレキング
   ja_romaji: Ganseki Mashin Garekingu
   ko:
   ko_rr:
@@ -143500,13 +143500,14 @@ name:
   it:
   pt:
   ja: <ruby>岩<rt>がん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>戦<rt>せん</rt></ruby><ruby>車<rt>しゃ</rt></ruby>ジャリオット
-  ja_romaji: Ganseki Sensha Jariotto
+  ja_romaji: Gansekisensha Jariotto
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
-  en:
+  en: |-
+    An ancient tank that drives with incredible balance. It shatters the balance of the enemy forces by penetrating a single point.
   de:
   es:
   fr:
@@ -143549,7 +143550,7 @@ name:
   it:
   pt:
   ja: データーイーター
-  ja_romaji:
+  ja_romaji: Dēta Ītā
   ko:
   ko_rr:
   zh-TW:
