--- a/data/rush/18397.yaml
+++ b/data/rush/18397.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all face-up monsters with the highest Level on the field.
+    Destroy all face-up monsters on the field with the highest Level.
   de:
   es:
   fr:
