--- a/data/rush/yugipedia1057090.yaml
+++ b/data/rush/yugipedia1057090.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 EARTH Attribute monster and 1 non-EARTH Attribute monster in your hand.
+    Reveal 1 EARTH Attribute monster and 1 non-EARTH Attribute monster in your hand to your opponent.
   de:
   es:
   fr:
