--- a/rush.yaml
+++ b/rush.yaml
@@ -90706,7 +90706,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all face-up monsters with the highest Level on the field.
+    Destroy all face-up monsters on the field with the highest Level.
   de:
   es:
   fr:
@@ -143457,7 +143457,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 1400 ATK until the end of this turn. Then, if you have 3 face-up Level 5-7 monsters with different Levels on your field, you can destroy all face-up Level 7 or lower monsters on your opponent's field.
+    This card gains 1400 ATK until the end of this turn. Then, if you have 3 Level 5-7 face-up monsters with different Levels on your field, you can destroy all face-up Level 7 or lower monsters on your opponent's field.
   de:
   es:
   fr:
@@ -143557,7 +143557,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 EARTH Attribute monster and 1 non-EARTH Attribute monster in your hand.
+    Reveal 1 EARTH Attribute monster and 1 non-EARTH Attribute monster in your hand to your opponent.
   de:
   es:
   fr:
