--- a/rush.yaml
+++ b/rush.yaml
@@ -143600,3 +143600,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1057090
+---
+konami_id:
+name:
+  en: Dark Matter Eliminate
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダークマター・アサシネイト
+  ja_romaji: Dākumatā Asashineito
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Reveal 1 face-down card on the field. Then, if that card is a Monster Card with 1300 DEF, you can destroy 1 face-up Level 8 or lower monster or 1 face-down card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Dark Matter
+images:
+- index: 1
+  image: DarkMatterEliminate-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP062
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1057171
