--- a/data/cards/79575620.yaml
+++ b/data/cards/79575620.yaml
@@ -229,7 +229,7 @@ sets:
     rarities:
     - Common
   - set_number: 2021-JPA01
-    set_name: Yu-Gi-Oh! Duelist Cup 2021 limited card
+    set_name: Duelist Cup 2021 Qualifiers participation card
     rarities:
     - Super Rare
   ko:
