--- a/rush.yaml
+++ b/rush.yaml
@@ -143687,7 +143687,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 200 damage to your opponent. Then, if you have a Level 3 FIRE Attribute Cyberse Type monster or Equip Spell Card in your Graveyard, you can make 1 face-up monster on your opponent's field lose 600 ATK/DEF until the end of this turn.
+    Inflict 200 damage to your opponent. Then, if you have a Level 3 FIRE Attribute Cyberse Type monster or an Equip Spell Card in your Graveyard, you can make 1 face-up monster on your opponent's field lose 600 ATK/DEF until the end of this turn.
   de:
   es:
   fr:
