--- a/data/cards/08540986.yaml
+++ b/data/cards/08540986.yaml
@@ -7,8 +7,8 @@ name:
   fr: Veidos le Dragon des Ténèbres Infinies
   it: Veidos il Drago dell'Oscurità Infinita
   pt: Veidos, o Dragão da Escuridão Sem Fim
-  ja:
-  ja_romaji:
+  ja: 滅亡き闇 ヴェイドス
+  ja_romaji: Metsunaki Yami Veidosu
   ko:
   ko_rr:
   zh-TW:
