--- a/data/tcg-speed-skill/yugipedia717130.yaml
+++ b/data/tcg-speed-skill/yugipedia717130.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP7-ENS02
+    set_name: Speed Duel Tournament Pack 7
+    rarities:
+    - Common
   de:
   - set_number: SS04-DES03
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
