--- a/data/rush/19786.yaml
+++ b/data/rush/19786.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>ＳＰ<rt>スーパー</rt></ruby>アシスタント・ヒーヤ
   ja_romaji: Sūpā Ashisutanto Hīya
-  ko: SP 어시스턴트 히야
+  ko: <ruby>SP<rt>슈퍼</rt></ruby> 어시스턴트 히야
   ko_rr:
   zh-TW:
   zh-CN:
