--- a/data/rush/19787.yaml
+++ b/data/rush/19787.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>ＳＰ<rt>スーパー</rt></ruby>アシスタント・ビリー
   ja_romaji: Sūpā Ashisutanto Birī
-  ko: SP 어시스턴트 비리
+  ko: <ruby>SP<rt>슈퍼</rt></ruby> 어시스턴트 비리
   ko_rr:
   zh-TW:
   zh-CN:
