--- a/rush.yaml
+++ b/rush.yaml
@@ -129014,7 +129014,7 @@ name:
   pt:
   ja: <ruby>ＳＰ<rt>スーパー</rt></ruby>アシスタント・ヒーヤ
   ja_romaji: Sūpā Ashisutanto Hīya
-  ko: SP 어시스턴트 히야
+  ko: <ruby>SP<rt>슈퍼</rt></ruby> 어시스턴트 히야
   ko_rr:
   zh-TW:
   zh-CN:
@@ -129087,7 +129087,7 @@ name:
   pt:
   ja: <ruby>ＳＰ<rt>スーパー</rt></ruby>アシスタント・ビリー
   ja_romaji: Sūpā Ashisutanto Birī
-  ko: SP 어시스턴트 비리
+  ko: <ruby>SP<rt>슈퍼</rt></ruby> 어시스턴트 비리
   ko_rr:
   zh-TW:
   zh-CN:
