--- a/data/cards/yugipedia1057670.yaml
+++ b/data/cards/yugipedia1057670.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: Ｘ－クロス・キャノン
-  ja_romaji:
+  ja: <ruby>Ｘ<rt>エックス</rt></ruby>－クロス・キャノン
+  ja_romaji: Ekkusu - Kurosu Kyanon
   ko:
   ko_rr:
   zh-TW:
