--- a/data/cards/yugipedia1057672.yaml
+++ b/data/cards/yugipedia1057672.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: Ｙ－ドラゴン・イアヘッド
-  ja_romaji:
+  ja: <ruby>Ｙ<rt>ワイ</rt></ruby>－ドラゴン・イアヘッド
+  ja_romaji: Wai - Doragon Iaheddo
   ko:
   ko_rr:
   zh-TW:
