--- a/data/cards/yugipedia1057673.yaml
+++ b/data/cards/yugipedia1057673.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: Ｚ－ジリオン・キャタピラー
-  ja_romaji:
+  ja: <ruby>Ｚ<rt>ゼット</rt></ruby>－ジリオン・キャタピラー
+  ja_romaji: Zetto - Jirion Kyatapirā
   ko:
   ko_rr:
   zh-TW:
