--- a/data/cards/yugipedia1057677.yaml
+++ b/data/cards/yugipedia1057677.yaml
@@ -32,8 +32,10 @@ attribute: LIGHT
 level: 9
 atk: 3000
 def: 2800
+materials: '"X-Cross Cannon" + "Y-Dragon Yearhead" + "Z-Zillion Tank"'
 series:
 - A-to-Z
+- Signature move
 images:
 - index: 1
   image: XYZHyperDragonCannon-DP29-JP-OP.png
