--- a/data/cards/yugipedia1057681.yaml
+++ b/data/cards/yugipedia1057681.yaml
@@ -32,6 +32,7 @@ attribute: LIGHT
 level: 6
 atk: 2200
 def: 1900
+materials: 1 LIGHT Machine-Type monster + "Y-Dragon Yearhead" or "Z-Zillion Tank"
 images:
 - index: 1
   image: UnionController-DP29-JP-OP.png
