--- a/data/cards/62325062.yaml
+++ b/data/cards/62325062.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>粘<rt>ねん</rt></ruby><ruby>着<rt>ちゃく</rt></ruby><ruby>落<rt>お</rt></ruby>とし<ruby>穴<rt>あな</rt></ruby>
   ja_romaji: Nenchaku Otoshiana
   ko: 끈끈이 함정 속으로
-  ko_rr:
+  ko_rr: Kkeun-kkeun-i Hwamjeong Sok-euro
   zh-TW: 黏性落穴
   zh-CN: 黏着的落穴
 text:
