--- a/data/cards/05606466.yaml
+++ b/data/cards/05606466.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>異<rt>い</rt></ruby><ruby>次<rt>じ</rt></ruby><ruby>元<rt>げん</rt></ruby>の<ruby>落<rt>お</rt></ruby>とし<ruby>穴<rt>あな</rt></ruby>
   ja_romaji: Ijigen no Otoshiana
   ko: 이차원의 함정 속으로
-  ko_rr:
+  ko_rr: Ichawon-ui Hamjeong Sok-euro
   zh-TW: 異次元的落穴
   zh-CN: 异次元的落穴
 text:
