--- a/data/cards/10140443.yaml
+++ b/data/cards/10140443.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Saramangureito Bāsuto Gurifon
   ko: 샐러맨그레이트 버스트 그리폰
   ko_rr: Saelleomaen-geureiteu Beoseuteu Geuripon
-  zh-TW:
+  zh-TW: 轉生炎獸 爆裂獅鷲
   zh-CN: 转生炎兽 爆裂狮鹫
 text:
   en: |-
@@ -38,7 +38,9 @@ text:
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지의 레벨 7 이하의 화염 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환하고, 그 몬스터의 원래 레벨만큼만 이 카드의 레벨을 내린다. 이 턴에, 자신은 화염 속성 몬스터밖에 특수 소환할 수 없다. ②: 이 카드를 "샐러맨그레이트 버스트 그리폰"을 소재로서 싱크로 소환했을 경우에 발동할 수 있다. 다음 스탠바이 페이즈에 자신 묘지에서 몬스터 1장을 특수 소환한다.
-  zh-TW:
+  zh-TW: |-
+    協調＋協調以外的怪獸１隻以上
+    此卡名的①②效果，１回合各僅限使用１次。 ①：可將我方墓地的１隻等級７以下的炎屬性怪獸做為對象發動。特殊召喚該怪獸，此卡的等級依據該怪獸的原本的等級進行降低。此回合，我方可特殊召喚的怪獸僅限炎屬性怪獸。 ②：可在此卡以「轉生炎獸 爆裂獅鷲」做為素材同步召喚的狀況下發動。在下一個準備階段，從我方墓地特殊召喚１隻怪獸。
   zh-CN: |-
     调整+1只以上调整以外的怪兽
     这个卡名的①②效果1回合各能使用1次。①：可以以自己墓地的1只等级7以下的炎属性怪兽为对象发动。将那只怪兽特殊召唤，这张卡的等级下降那只怪兽的原本的等级数值。这个回合，自己特殊召唤的只能是炎属性怪兽。②：这张卡是将「転生炎獣バースト・グリフォン ／转生炎兽 爆裂狮鹫」作为素材来同调召唤的场合可以发动。下个准备阶段从自己的墓地将1只怪兽特殊召唤。
@@ -96,3 +98,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934313
+master_duel_rarity: SR
