--- a/data/cards/11962031.yaml
+++ b/data/cards/11962031.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Saramangureito Obu Faia
   ko: 샐러맨그레이트 오브 파이어
   ko_rr: Saelleomaen-geureiteu Obeu Paieo
-  zh-TW:
+  zh-TW: 轉生炎獸 烈焰
   zh-CN: 火炎之转生炎兽
 text:
   en: |-
@@ -30,7 +30,8 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。「サラマングレイト・オブ・ファイア」を除く、レベル４以下の「サラマングレイト」モンスター１体をデッキから手札に加える。この効果の発動後、ターン終了時まで自分は炎属性モンスターしか特殊召喚できない。②：自分のサイバース族モンスターが戦闘を行うダメージステップ開始時に、墓地のこのカードを除外して発動できる。その自分のモンスターを破壊する。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 일반 소환 / 특수 소환했을 경우에 발동할 수 있다. "샐러맨그레이트 오브 파이어"가 아닌, 레벨 4 이하의 "샐러맨그레이트" 몬스터 1장을 덱에서 패에 넣는다. 이 효과의 발동 후, 턴 종료시까지 자신은 화염 속성 몬스터밖에 특수 소환할 수 없다. ②: 자신의 사이버스족 몬스터가 전투를 실행하는 데미지 스텝 개시시에, 묘지의 이 카드를 제외하고 발동할 수 있다. 그 자신 몬스터를 파괴한다.
-  zh-TW:
+  zh-TW: |-
+    此卡名的①②效果，１回合各僅限使用１次。 ①：可在此卡召喚・特殊召喚的狀況下發動。從牌組將１隻「轉生炎獸 烈焰」以外的等級４以下的「轉生炎獸」怪獸加入手牌。此效果發動後，在回合結束前我方可特殊召喚的怪獸僅限炎屬性怪獸。 ②：我方的電子界族怪獸進行戰鬥的傷害步驟開始時，可將墓地的此卡除外發動。破壞我方的該怪獸。
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：这张卡召唤·特殊召唤的场合可以发动。从卡组将1只除「サラマングレイト・オブ・ファイア／火炎之转生炎兽」之外的、等级4以下的「サラマングレイト／转生炎兽」怪兽加入手牌。这个效果发动后，直到回合结束时为止自己特殊召唤的只能是炎属性怪兽。②：自己的电子空间族怪兽进行战斗的伤害步骤开始时，可以将墓地的这张卡除外发动。将那只自己的怪兽破坏。
 card_type: Monster
@@ -86,3 +87,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 943090
+master_duel_rarity: UR
