--- a/data/cards/19027895.yaml
+++ b/data/cards/19027895.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Saramangureito Rivaibu
   ko: 샐러맨그레이트 리바이브
   ko_rr: Saelleomaen-geureiteu Ribaibeu
-  zh-TW:
+  zh-TW: 轉生炎獸 重生
   zh-CN: 转生炎兽的复生
 text:
   en: |-
@@ -30,7 +30,8 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の炎属性モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。②：墓地のこのカードを除外し、自分フィールドの「サラマングレイト」モンスター１体と、自分の墓地の同名モンスター１体を対象として発動できる。その墓地のモンスターをデッキに戻し、その自分フィールドのモンスターの攻撃力はターン終了時まで自身の元々の攻撃力分アップする。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지의 화염 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. ②: 묘지의 이 카드를 제외하고, 자신 필드의 "샐러맨그레이트" 몬스터 1장과, 자신 묘지의 같은 이름의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 묘지의 몬스터를 덱으로 되돌리고, 그 자신 필드의 몬스터의 공격력은 턴 종료시까지 자신의 원래 공격력만큼 올린다.
-  zh-TW:
+  zh-TW: |-
+    此卡名的①②效果，１回合各僅限使用１次。 ①：可將我方墓地的１隻炎屬性怪獸做為對象發動。特殊召喚該怪獸。 ②：可將墓地的此卡除外，將我方場上的１隻「轉生炎獸」怪獸及我方墓地的１隻同名怪獸做為對象發動。將墓地的該怪獸送回牌組，我方場上的該怪獸的攻擊力在回合結束前依據自身的原本的攻擊力數值進行提升。
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：可以以自己墓地的1只炎属性怪兽为对象发动。将那只怪兽特殊召唤。②：可以将墓地的这张卡除外，以自己场上的1只「サラマングレイト／转生炎兽」怪兽和自己墓地的1只同名怪兽为对象发动。使那只墓地的怪兽返回卡组，那只自己场上的怪兽的攻击力直到回合结束时为止上升自身的原本的攻击力数值。
 card_type: Trap
@@ -80,3 +81,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934347
+master_duel_rarity: N
