--- a/data/cards/48017189.yaml
+++ b/data/cards/48017189.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Ī Emu:Pī Gurenyādo
   ko: 이엠:피 그레냐드
   ko_rr:
-  zh-TW:
+  zh-TW: EM：P榴彈貓
   zh-CN: EM：P猫猫手榴弹
 text:
   en: |-
@@ -30,7 +30,8 @@ text:
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：フィールドまたは自分か相手の墓地にＬモンスターが存在する場合、このカードは手札から特殊召喚できる。②：このカードが手札・墓地に存在し、自分フィールドのリンク２モンスターが、墓地へ送られた場合または表側で除外された場合、このカードを除外し、相手フィールドのカード１枚を対象として発動できる。そのカードを手札に戻す。
   ko: |-
     이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 필드 또는 자신이나 상대의 묘지에 링크 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 이 카드가 패 / 묘지에 존재하고, 자신 필드의 링크 2 몬스터가, 묘지로 보내졌을 경우 또는 앞면으로 제외되었을 경우, 이 카드를 제외하고, 상대 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 패로 되돌린다.
-  zh-TW:
+  zh-TW: |-
+    透過此卡名①方法的特殊召喚，１回合僅限１次，②效果１回合僅限使用１次。 ①：在場上或我方或對方墓地存在連結怪獸的狀況下，可從手牌特殊召喚此卡。 ②：在此卡存在於手牌・墓地，我方場上的連結２怪獸被送至墓地或以正面被除外的狀況下，可將此卡除外，將對方場上的１張卡做為對象發動。將該卡送回手牌。
   zh-CN: |-
     此卡名以①方法的特殊召唤１回合仅可进行１次，且②效果１回合仅可使用１次。
     ①：场上或自己・对手的墓地存在连接怪兽的情况下，此卡可从手牌中特殊召唤。
@@ -94,3 +95,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1022448
+master_duel_rarity: SR
