--- a/data/cards/57134592.yaml
+++ b/data/cards/57134592.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Saramangureito Reijingu Fenikkusu
   ko: 샐러맨그레이트 레이징 피닉스
   ko_rr: Saelleomaen-geureiteu Reijing Pinikseu
-  zh-TW:
+  zh-TW: 轉生炎獸 狂怒不死鳥
   zh-CN: 转生炎兽 怒火不死鸟
 text:
   en: |-
@@ -38,7 +38,9 @@ text:
   ko: |-
     화염 속성 효과 몬스터 2장 이상
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 "샐러맨그레이트 레이징 피닉스"를 소재로서 링크 소환했을 경우에 발동할 수 있다. 덱에서 "샐러맨그레이트" 카드 1장을 패에 넣는다. ②: 이 카드가 묘지에 존재하는 상태에서, 자신 필드의 앞면 표시의 화염 속성 몬스터가 전투 / 효과로 파괴되었을 경우, 그 중의 1장을 대상으로 하고 발동할 수 있다. 이 카드를 특수 소환하고, 이 카드의 공격력을 대상 몬스터의 공격력만큼 올린다.
-  zh-TW:
+  zh-TW: |-
+    炎屬性的效果怪獸２隻以上
+    此卡名的①②效果，１回合各僅限使用１次。 ①：可在此卡以「轉生炎獸 狂怒不死鳥」做為素材連結召喚的狀況下發動。從牌組將１張「轉生炎獸」卡加入手牌。 ②：此卡存在於墓地的狀態，在我方場上的正面表示的炎屬性怪獸因戰鬥・效果被破壞的狀況下，可將其中１隻做為對象發動。特殊召喚此卡，此卡的攻擊力依據對象怪獸的攻擊力的數值進行提升。
   zh-CN: |-
     炎属性的效果怪兽2只以上
     这个卡名的①②效果1回合各能使用1次。①：这张卡是将「転生炎獣レイジング・フェニックス／转生炎兽 怒火不死鸟」作为素材来链接召唤的场合可以发动。从卡组将1张「サラマングレイト／转生炎兽」卡加入手牌。②：这张卡在墓地存在的状态下，自己场上的表侧表示的炎属性怪兽被战斗·效果破坏的场合，可以以那之中的1只为对象发动。将这张卡特殊召唤，这张卡的攻击力上升对象怪兽的攻击力数值。
@@ -99,3 +101,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934312
+master_duel_rarity: UR
