--- a/data/cards/80723580.yaml
+++ b/data/cards/80723580.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>大<rt>おお</rt></ruby><ruby>落<rt>お</rt></ruby>とし<ruby>穴<rt>あな</rt></ruby>
   ja_romaji: Ō Otoshiana
   ko: 큰 함정 속으로
-  ko_rr:
+  ko_rr: Keun Hamjeong Sok-euro
   zh-TW: 大落穴
   zh-CN: 大落穴
 text:
