--- a/data/cards/84755744.yaml
+++ b/data/cards/84755744.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Saramangureito Tigā
   ko: 샐러맨그레이트 티거
   ko_rr: Saelleomaen-geureiteu Tigeo
-  zh-TW:
+  zh-TW: 轉生炎獸 猛虎
   zh-CN: 转生炎兽 跳虎
 text:
   en: |-
@@ -30,7 +30,8 @@ text:
     このカード名の①の効果は１ターンに１度しか使用できない。①：手札から他の「サラマングレイト」カード１枚を捨てて発動できる。このカードを手札から特殊召喚する。②：自分フィールドのこのカードを炎属性ＳモンスターのＳ素材とする場合、このカードをチューナー以外のモンスターとして扱う事ができる。③：１ターンに１度、自分メインフェイズに発動できる。このカードのレベルを１つ上げるか下げる。
   ko: |-
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패에서 다른 "샐러맨그레이트" 카드 1장을 버리고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 필드의 이 카드를 화염 속성 싱크로 몬스터의 싱크로 소재로 할 경우, 이 카드를 튜너 이외의 몬스터로 취급할 수 있다. ③: 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 이 카드의 레벨을 1개 올리거나 내린다.
-  zh-TW:
+  zh-TW: |-
+    此卡名的①效果，１回合僅限使用１次。 ①：可從手牌捨棄１張其他「轉生炎獸」卡發動。從手牌特殊召喚此卡。 ②：在以我方場上的此卡做為炎屬性同步怪獸的同步素材的狀況下，可將此卡視為協調以外的怪獸。 ③：１回合１次，可在我方主要階段發動。此卡的等級提升或降低１。
   zh-CN: |-
     这个卡名的①效果1回合只能使用1次。①：可以从手牌舍弃1张其他的「サラマングレイト／转生炎兽」卡发动。将这张卡从手牌特殊召唤。②：要将自己场上的这张卡作为炎属性同调怪兽的同调素材的场合，也能将这张卡视为调整以外的怪兽。③：1回合1次，自己的主要阶段可以发动。这张卡的等级上升或下降1。
 card_type: Monster
@@ -84,3 +85,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 934345
+master_duel_rarity: SR
