--- a/data/cards/48017189.yaml
+++ b/data/cards/48017189.yaml
@@ -44,7 +44,11 @@ atk: 800
 def: 0
 images:
 - index: 1
+  image: EMPMeowmine-PHNI-JP-R.png
+  illustration: EMPMeowmine-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: EMPMeowmine-PHNI-EN-UR-1E.png
+  illustration: EMPMeowmine-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PHNI-EN032
