--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -25,24 +25,12 @@
 - yugipedia: 10276
   fake_password: 10000100
 ## Prereleases
-# Cursed Fire King Doom Burst
-- yugipedia: 1050416
-  fake_password: 100200245
-# Infernity Queen
-- yugipedia: 1050414
-  fake_password: 100200246
-# Bombing Beast Fire Bomber
-- yugipedia: 1050415
-  fake_password: 100200247
-# Galaxy War Drake
-- yugipedia: 1050253
-  fake_password: 100200253
+# Detonating Kuriboh
+- yugipedia: 1054896
+  fake_password: 100200254
 # Complete File: Story of White
 - set_abbreviation: CF01
   fake_password_range: 100436300
-# Legacy of Destruction
-- set_abbreviation: LEDE
-  fake_password_range: 101204000
 # Infinite Forbidden
 - set_abbreviation: INFO
   fake_password_range: 101205000
