--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -4450,6 +4450,18 @@
   ko_rr:
   zh-TW:
   zh-CN:
+- en: Clear
+  de: Frei
+  es: Transparente
+  fr: Transparent
+  it: Chiaro
+  pt:
+  ja: クリアー
+  ja_romaji: Kuriā
+  ko: 클리어
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Penguin
   de: Pinguin
   es: Pingüino
