--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -4450,6 +4450,18 @@ SPYRAL MISSION:
   ko_rr:
   zh-TW:
   zh-CN:
+Clear:
+  de: Frei
+  es: Transparente
+  fr: Transparent
+  it: Chiaro
+  pt:
+  ja: クリアー
+  ja_romaji: Kuriā
+  ko: 클리어
+  ko_rr:
+  zh-TW:
+  zh-CN:
 Penguin:
   de: Pinguin
   es: Pingüino
