--- a/data/rush/yugipedia1044915.yaml
+++ b/data/rush/yugipedia1044915.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: はぐれ使い<ruby>魔<rt>ま</rt></ruby><ruby>女<rt>じょ</rt></ruby>
-  ja_romaji: Hagure Tsukamajo
+  ja_romaji: Hagure Tsukaimajo
   ko:
   ko_rr:
   zh-TW:
