--- a/data/cards/96352712.yaml
+++ b/data/cards/96352712.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Kodaika
   ko: 과대화
   ko_rr: Gwadaehwa
-  zh-TW:
+  zh-TW: 誇大化
   zh-CN: 夸大化
 text:
   en: |-
@@ -60,7 +60,12 @@ text:
     ●그 공격 몬스터를 수비 표시로 한다.
     ●그 공격 대상 몬스터를 패로 되돌린다.
     ●그 전투를 실행하는 몬스터 2장을 파괴한다.
-  zh-TW:
+  zh-TW: |-
+    此卡名的卡１回合僅限發動１張。
+    ①：在怪獸彼此進行戰鬥的傷害步驟開始時，可從以下效果中選擇１個發動。
+    ●將該攻擊怪獸變為守備表示。
+    ●將該攻擊對象怪獸送回手牌。
+    ●破壞進行戰鬥的該２隻怪獸。
   zh-CN: |-
     此卡名的卡１回合仅可发动１张。
     ①：怪兽之间进行战斗的伤害步骤开始时，可从以下效果中选择１个发动。
@@ -117,3 +122,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 911977
+master_duel_rarity: SR
