--- a/rush.yaml
+++ b/rush.yaml
@@ -140714,7 +140714,9 @@ series:
 - Cybersepice
 images:
 - index: 1
-  image: CybersepiceNutmeg-RDKP17-JP-OP.png
+  image: CybersepiceNutmeg-RDKP17-JP-SR.png
+- index: 2
+  image: CybersepiceNutmeg-RDKP17-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP018
@@ -141238,13 +141240,14 @@ series:
 - Straynge Cat
 images:
 - index: 1
-  image: StrayngeCatWitch-RDKP17-JP-OP.png
+  image: StrayngeCatWitch-RDKP17-JP-R.png
 sets:
   ja:
   - set_number: RD/KP17-JP007
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -141422,7 +141425,9 @@ series:
 - Hybridrive
 images:
 - index: 1
-  image: HybridriveBackFusion-RDKP17-JP-OP.png
+  image: HybridriveBackFusion-RDKP17-JP-SR.png
+- index: 2
+  image: HybridriveBackFusion-RDKP17-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP052
@@ -141677,13 +141682,14 @@ series:
 - Cybersepice
 images:
 - index: 1
-  image: SpiceCrossMix-RDKP17-JP-OP.png
+  image: SpiceCrossMix-RDKP17-JP-R.png
 sets:
   ja:
   - set_number: RD/KP17-JP055
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -141799,13 +141805,14 @@ atk: 2200
 def: 0
 images:
 - index: 1
-  image: WheatclothDemeter-RDKP17-JP-OP.png
+  image: WheatclothDemeter-RDKP17-JP-R.png
 sets:
   ja:
   - set_number: RD/KP17-JP017
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -142173,7 +142180,9 @@ series:
 - Sevens Road
 images:
 - index: 1
-  image: SevensRoadUltimaWitch-RDKP17-JP-OP.png
+  image: SevensRoadUltimaWitch-RDKP17-JP-UR.png
+- index: 2
+  image: SevensRoadUltimaWitch-RDKP17-JP-ORR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP045
@@ -142296,13 +142305,14 @@ atk: 2500
 def: 800
 images:
 - index: 1
-  image: GravebronzeDragon-RDKP17-JP-OP.png
+  image: GravebronzeDragon-RDKP17-JP-R.png
 sets:
   ja:
   - set_number: RD/KP17-JP002
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -143295,7 +143305,9 @@ series:
 - Blue-Eyes
 images:
 - index: 1
-  image: DragonicDomination-RDKP17-JP-OP.png
+  image: DragonicDomination-RDKP17-JP-SR.png
+- index: 2
+  image: DragonicDomination-RDKP17-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP064
@@ -143634,13 +143646,14 @@ series:
 - Garzett
 images:
 - index: 1
-  image: GodMajuGarzett-RDKP17-JP-OP.png
+  image: GodMajuGarzett-RDKP17-JP-R.png
 sets:
   ja:
   - set_number: RD/KP17-JP043
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -143937,7 +143950,9 @@ series:
 - JAM
 images:
 - index: 1
-  image: JAMPCatch-RDKP17-JP-OP.png
+  image: JAMPCatch-RDKP17-JP-SR.png
+- index: 2
+  image: JAMPCatch-RDKP17-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP063
