--- a/data/cards/39238953.yaml
+++ b/data/cards/39238953.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>天<rt>てん</rt></ruby><ruby>声<rt>せい</rt></ruby>の<ruby>服<rt>ふく</rt></ruby><ruby>従<rt>じゅう</rt></ruby>
   ja_romaji: Tensei no Fukujū
   ko: 천성의 복종
-  ko_rr:
+  ko_rr: Cheonseong-ui Bokjong
   zh-TW: 天聲的服從
   zh-CN: 天声的服从
 text:
