--- a/rush.yaml
+++ b/rush.yaml
@@ -143480,7 +143480,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Each player excavates the top 2 cards of their Deck. Then, inflict damage to your opponent equal to [the total Levels of the excavated monsters] x 100. Each player places their excavated cards on the top of their Deck in any order.
+    Each player excavates the top 2 cards of their Deck. Then, inflict damage to your opponent equal to [the total Levels of the excavated monsters] x 100. Each player shuffles their excavated cards into their Deck.
   de:
   es:
   fr:
