--- a/data/cards/24094653.yaml
+++ b/data/cards/24094653.yaml
@@ -44,6 +44,7 @@ images:
   illustration: Polymerization-MADU-EN-VG-artwork.png
 - index: 3
   image: Polymerization-VP24-JP-OP.png
+  illustration: Polymerization-OW-3.png
 sets:
   en:
   - set_number: DB1-EN119
