--- a/data/cards/50140163.yaml
+++ b/data/cards/50140163.yaml
@@ -77,6 +77,9 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: CDIP-KR008
     set_name: Cyberdark Impact
