--- a/data/cards/23756165.yaml
+++ b/data/cards/23756165.yaml
@@ -76,6 +76,9 @@ sets:
     set_name: Cyberdark Impact
     rarities:
     - Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: CDIP-KR007
     set_name: Cyberdark Impact
