--- a/data/cards/87257460.yaml
+++ b/data/cards/87257460.yaml
@@ -76,6 +76,9 @@ sets:
     set_name: 'Cyberdark Impact: Vendor Edition'
     rarities:
     - Normal Parallel Rare
+  - set_number: AC04-JP0??
+    set_name: Animation Chronicle 2024
+    rarities:
   ko:
   - set_number: CDIP-KR006
     set_name: Cyberdark Impact
