--- a/data/cards/86239173.yaml
+++ b/data/cards/86239173.yaml
@@ -8,7 +8,7 @@ name:
   it: Sauro Cornuto
   pt: Chifressauro
   ja: ヘルホーンドザウルス
-  ja_romaji: Heruhōndo Zaurusu
+  ja_romaji: Heruhōndozaurusu
   ko: 헬혼드사우루스
   ko_rr:
   zh-TW: 長角翼暴龍
