--- a/data/cards/yugipedia1055273.yaml
+++ b/data/cards/yugipedia1055273.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Spellcaster monsters
-    If this card is Link Summoned: You can Special Summon 1 "Allure Queen" monster from your Deck or GY, and if you do, this gains 1500 ATK until the end of the next turn. You can activate the effects that equip a monster(s) to themselves of monsters with "Allure Queen" in their original names as Quick Effects. Once per turn, when your opponent activates a card or effect (Quick Effect): You can destroy 1 card on the field, also "Allure Queen" monsters you control cannot be destroyed by card effects for the rest of this turn.
+    If this card is Link Summoned: You can Special Summon 1 "Allure Queen" monster from your Deck or GY, and if you do, this card gains 1500 ATK until the end of the next turn. You can activate the effects that equip a monster(s) to themselves of monsters with "Allure Queen" in their original names as Quick Effects. Once per turn, when your opponent activates a card or effect (Quick Effect): You can destroy 1 card on the field, also "Allure Queen" monsters you control cannot be destroyed by card effects for the rest of this turn.
   de:
   es:
   fr:
