--- a/data/rush/18286.yaml
+++ b/data/rush/18286.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 2 or more face-up Psychic Type monsters on your field, including a Normal Monster.
+    You have 2 or more face-up Psychic monsters on your field, including a Normal Monster.
   de:
   es:
   fr:
@@ -58,9 +58,4 @@ sets:
     set_name: 'Deck Mod Pack: Fortissimo of the Whirlwinds!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715449
