--- a/data/rush/19424.yaml
+++ b/data/rush/19424.yaml
@@ -42,7 +42,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card's name becomes "Blue-Eyes White Dragon", and gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
+    This turn, this card's name becomes "Blue-Eyes White Dragon" and it gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
   de:
   es:
   fr:
@@ -88,9 +88,4 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1004313
