--- a/data/rush/16329.yaml
+++ b/data/rush/16329.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 2 Level 7 or higher Warrior Type monsters with different names from your Graveyard on the bottom of your Deck in any order.
+    Place 2 Level 7 or higher Warrior monsters with different names from your Graveyard on the bottom of the Deck in any order.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 or higher Warrior Type monster from your Graveyard face-up to your field.
+    Special Summon 1 Level 7 or higher Warrior monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -60,7 +60,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715385
