--- a/data/rush/16350.yaml
+++ b/data/rush/16350.yaml
@@ -1,6 +1,6 @@
 konami_id: 16350
 name:
-  en: The Menacing Eyes of the Sky Emperor
+  en: Mighty Gaze of the Sky Emperor
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: TheMenacingEyesoftheSkyEmperor-RDKP05-JP-SR.png
+  image: MightyGazeoftheSkyEmperor-RDKP05-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP05-JP044
@@ -56,9 +56,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717077
