--- a/data/rush/16585.yaml
+++ b/data/rush/16585.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have a face-up Level 7 or higher Dinosaur Type monster on your field, send 1 card from your hand to the Graveyard.
+    If you have a face-up Level 7 or higher Dinosaur monster on your field, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714577
