--- a/data/rush/16686.yaml
+++ b/data/rush/16686.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 Machine Type monster from your hand to the Graveyard.
+    Send 1 Machine monster from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -84,9 +84,4 @@ sets:
     set_name: Versus Pack Maximum Force
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714363
