--- a/data/rush/16687.yaml
+++ b/data/rush/16687.yaml
@@ -1,6 +1,6 @@
 konami_id: 16687
 name:
-  en: Assault Armato
+  en: Assault Cannon
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have 3 face-up Machine Type monsters on your field, send the top card of your Deck to the Graveyard.
+    If you have 3 face-up Machine monsters on your field, send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1200
 def: 600
 images:
 - index: 1
-  image: AssaultArmato-RDGRD2-JP-C.png
+  image: AssaultCannon-RDGRD2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP031
@@ -68,9 +68,4 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713253
