--- a/data/rush/16720.yaml
+++ b/data/rush/16720.yaml
@@ -1,6 +1,6 @@
 konami_id: 16720
 name:
-  en: Eternal Freeze
+  en: Forever Freeze
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: EternalFreeze-RDSD0A-JP-C.png
+  image: ForeverFreeze-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP064
@@ -64,9 +64,4 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714814
