--- a/data/rush/19428.yaml
+++ b/data/rush/19428.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal Summoned or Special Summoned this card, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
+    During your Main Phase that you Normal or Special Summoned this card, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field. Your Level 7 or lower monsters cannot attack this turn.
+    Special Summon 1 Level 8 LIGHT Attribute Dragon monster from your Graveyard face-up to your field. This turn, your Level 7 or lower monsters cannot attack.
   de:
   es:
   fr:
@@ -70,9 +70,4 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1011526
