--- a/data/rush/19549.yaml
+++ b/data/rush/19549.yaml
@@ -1,6 +1,6 @@
 konami_id: 19549
 name:
-  en: Ultimate Flag Beast Bolt Tricorn
+  en: Ultimate Flag Beast Boltricorn
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-down Spell/Trap Card on your opponent's field cannot be activated until the end of your opponent's next turn.
+    1 face-down Spell/Trap Card on your opponent's field cannot be activated until the end of their next turn.
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Ultimate Flag
 images:
 - index: 1
-  image: UltimateFlagBeastBoltTricorn-RDMRP2-JP-R.png
+  image: UltimateFlagBeastBoltricorn-RDMRP2-JP-R.png
 sets:
   ja:
   - set_number: RD/MRP2-JP013
@@ -64,9 +64,4 @@ sets:
     rarities:
     - Rare
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012486
