--- a/data/rush/20094.yaml
+++ b/data/rush/20094.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    The only monsters in your Graveyard are Cyberse Type.
+    The only monsters in your Graveyard are Cyberse monsters.
   de:
   es:
   fr:
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 Cyberse Type monster with 0 DEF from among the cards sent to your hand.
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 Cyberse monster with 0 DEF from among the cards sent to your hand.
   de:
   es:
   fr:
@@ -56,9 +56,4 @@ sets:
     rarities:
     - Common
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1045997
