--- a/data/rush/20334.yaml
+++ b/data/rush/20334.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have not drawn a card during the Main Phase of the turn you Normal Summoned this card.
+    During the turn you Normal Summoned this card, if you have not drawn a card during this Main Phase.
   de:
   es:
   fr:
