--- a/data/rush/17875.yaml
+++ b/data/rush/17875.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle Level 7 Normal Monsters from your opponent's Graveyard into their Deck, up to [the number of Spell Cards in your opponent's Graveyard]. Then, you can Special Summon 1 "Kappa Emperor River Slider" from your Graveyard face-up to your field.
+    Shuffle Level 7 Normal Monsters from your opponent's Graveyard into the Deck, up to [the number of Spell Cards in their Graveyard]. Then, you can Special Summon 1 "Kappa Emperor River Slider" from your Graveyard face-up to your field.
   de:
   es:
   fr:
