--- a/data/rush/17868.yaml
+++ b/data/rush/17868.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters in your opponent's Graveyard] x 100 until the end of this turn.
+    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters in their Graveyard] x 100 until the end of this turn.
   de:
   es:
   fr:
