--- a/data/rush/20339.yaml
+++ b/data/rush/20339.yaml
@@ -40,7 +40,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, you can make 1 face-up monster on your opponent's field lose 700 ATK/DEF until the end of your opponent's next turn.
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can make 1 face-up monster on your opponent's field lose 700 ATK/DEF until the end of their next turn.
   de:
   es:
   fr:
