--- a/data/rush/19678.yaml
+++ b/data/rush/19678.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon Level 8 or lower WIND Attribute Psychic Type monsters from your Graveyard equal to [the number of cards revealed to meet the requirement] face-up to your field.
+    Special Summon Level 8 or lower WIND Attribute Psychic Type monsters from your Graveyard face-up to your field equal to [the number of cards revealed to meet the requirement].
   de:
   es:
   fr:
