--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -250,6 +250,18 @@
   ko_rr: Eillieon
   zh-TW: 外星人
   zh-CN:
+- en: Shark
+  de: Stung
+  es: Tiburón
+  fr: Requin
+  it: Squalo
+  pt: Tubarão
+  ja: シャーク
+  ja_romaji: Shāku
+  ko: 샤크
+  ko_rr: Syakeu
+  zh-TW: 鯊
+  zh-CN:
 - en: P.U.N.K.
   de: P.U.N.K.
   es: P.U.N.K.
